force-app/main/default/objects/Medication__c/Medication__c.object-meta.xml
<CustomObject>
    <description>Represents a medication with regulatory and handling attributes.</description>
    <label>Medication</label>
    <nameField>
        <label>Medication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>