force-app/main/default/objects/Medication__c/fields/Cold_Chain_Required__c.field-meta.xml
<CustomField>
    <fullName>Cold_Chain_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this medication requires cold chain handling</description>
    <label>Cold Chain Required</label>
    <type>Checkbox</type>
</CustomField>