force-app/main/default/objects/Medication__c/fields/DEA_Schedule__c.field-meta.xml
<CustomField>
    <fullName>DEA_Schedule__c</fullName>
    <description>DEA controlled-substance schedule classification</description>
    <label>DEA Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>