force-app/main/default/objects/Medication__c/fields/NDC__c.field-meta.xml
<CustomField>
    <fullName>NDC__c</fullName>
    <description>National Drug Code (unique identifier)</description>
    <inlineHelpText>Provide the 10- or 11-digit NDC value with labeler, product, and package codes.</inlineHelpText>
    <label>NDC</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>